# CUDA_TOYS

./: README.md
simple_example_add_arrays/build_with_cmake/: CMakeLists.txt  README  add.cu  setup-cuda.sh
simple_example_add_arrays/build_with_nvcc/: README  add_v0.cc  add_v1.cu  add_v2.cu  add_v3.cu  setup-cuda.sh
